--- a/style.css
+++ b/style.css
@@ -1,38 +1,41 @@
+body{
+    margin:0;
+}
 body .one{
-    width:800px;
-    height:800px;
+    width:500px;
+    height:500px;
+    background-color: red;
     top:0;
     left:0;
-    position: absolute;
+    
 
-    background-color: red;
-    
-}
 
-body .two{ 
-    width:600px; 
-    height:600px;
-    background-color: yellow;
-    position:absolute;
-    top:100px;
-    left:100px; 
-    
-    
 }
-body .three{
+body .two{
     width:400px;
     height:400px;
-    background-color: green;
-    position:absolute;
-    top:100px;
-    left:100px;
+    background-color: yellow;
+    top:0;
+    left:0;
     
+
+}
+body .three{
+    width:300px;
+    height:300px;
+    background-color: green;
+    top:0;
+    left:0;
+    
+
 }
 body .four{
-    width:200px;
-    height:200px;
+    width:100px;
+    height:100px;
     background-color: blue;
+    top:0;
+    right:0;
     position:absolute;
-    top:100px;
-    left:100px;
+
 }
+
